# goal-dsl

./: .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  build.sh  docker-compose.yml  env  requirements.txt  runtests.sh  set_version.sh  setup.cfg  setup.py  validate_examples.py
.github/workflows/: ci.yml
examples/: area_goals.goal  complex.goal  complex_goals.goal  sequence_goal.goal  target.goal  target_complex.goal  target_topic.goal  time_constraints.goal  topic_goals.goal  validate_all.sh
examples/advanced_conditions/: entities.goal  scenario.goal  scenarios.goal
examples/area_goals/: app.py  model.goal  scenario.goal  target.goal
examples/complex_goal/: area_goals.goal  complex_goals.goal  scenario.goal  target.goal
examples/complex_goal_at_least_once/: scenario.goal
examples/composite_entity/: scenario.goal
examples/data_types/: scenario.goal
examples/do_rectangle/: DoRectangleScenario.py  app.py  scenario.goal
examples/entity_attr_stream/: scenario.goal
examples/entity_goals/: scenario.goal  target.goal
examples/entity_pycond/: scenario.goal
examples/entity_rest/: scenario.goal
examples/goal_repeater/: scenario.goal
examples/goal_repeater_2/: scenario.goal
examples/loc_measure/: entity_1_goal_1.goal  entity_1_goal_2.goal  entity_1_goal_3.goal  entity_2_goal_1.goal  entity_2_goal_2.goal  entity_3_goal_1.goal  entity_3_goal_3.goal  scenario.goal
examples/moving_area_goal/: model.goal  scenario.goal
examples/old/: complex_goals.goal  sequence_goal.goal  time_constraints.goal
examples/pose_goals/: app.py  pose_goals.goal  scenario_1_orientation.goal  (+2 more)
goal_dsl/: __init__.py  codegen.py  definitions.py  generator.py  goal_dsl.pu  goal_dsl.tx  language.py  logging.py  utils.py
(+42 files in other folders)
