[metadata]
name = goal-dsl
author = Konstantinos Panayiotou
author_email = klpanagi@gmail.com
license = MIT
description = Domain-Specific Language for Goal definition in IoT Applications
keywords = textX
url = github.com/robotics-4-all/goal-dsl
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
install_requires =
    textX
include_package_data = True
package_dir =
    goal_dsl = goal_dsl

[options.extras_require]
dev =
    wheel
    twine
test =
    flake8
    tox
    coverage
    coveralls
    pytest

[options.package_data]
    goal_dsl = *.tx

[options.entry_points]
textx_languages =
    goal_dsl = goal_dsl:goaldsl_language

textx_generators =
    goal_gen = goal_dsl:codegen_python

console_scripts =
    goaldsl = goal_dsl.cli.cli:main

[bdist_wheel]
universal = 1

[flake8]
exclude = .git/*,.eggs/*,.tox/*, build/*, dist/*, venv/*
max-line-length = 80